--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
-.div {
-  background-color: antiquewhite;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+@layer utilities {
+  .font-roboto {
+    @apply font-sans;
+  }
 }
